# the-seed

./: .agent-profile.yaml  .ai-instructions.md  .dockerignore  .editorconfig  .eslintrc.js  .gitattributes  .gitignore  ALPHA_RELEASE_PHASE1_SUMMARY.md  ActivityLog.xml  App.config  Assembly-CSharp-Editor-firstpass.csproj  Assembly-CSharp-Editor.csproj  Assembly-CSharp-firstpass.csproj  Assembly-CSharp.Player.csproj  Assembly-CSharp.csproj  CHANGELOG.md  CONTRIBUTING.md  CUSTOMER_VALIDATION_REPORT.md  Directory.Build.props  DocCodeSamples.csproj  Dockerfile  Dockerfile.mmo  Dockerfile.security  FINAL_SESSION_SUMMARY.txt  FIX_SUMMARY.md  HOTFIX_SESSION_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPORT_PATH_FIXES.md  INTEGRATION-STATUS-REPORT.md  LICENSE  LivingDevAgent.Editor.csproj  LivingDevAgent.Runtime.Player.csproj  LivingDevAgent.Runtime.csproj  MANIFESTO.md  MMO_DELIVERY_SUMMARY.md  OVERLORD_SECURITY_FIX_SUMMARY.txt  PATHS_FIXED_CHECKLIST.md  PHASE-1-STATUS.txt  PHASE1_COMPLETION_REPORT.md  PHASE1_PROJECT_MAP.md  (+210 more)
.bin/: python3
.claude/: Sacred Code Classification Protocol.md
.devtimetravel/: README.md
.github/: CODEOWNERS  DELIVERY_CHECKLIST.md  Sacred Code Classification Protocol.md  TEST_ADDITIONS.md  WORKFLOW_FIXES_SUMMARY.md  copilot-instructions.md  dependabot.yml  pull_request_template.md  ritualbot-config.json
.test_results/: system_inventory_20251030_113552.json  system_inventory_20251030_113552.txt
.timer_data/: active_session.json  timer_sessions.json
Assets/: Sacred Code Classification Protocol.md  UniversalRenderPipelineGlobalSettings.asset
ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset
TLDL/: index.md
UserSettings/: EditorUserSettings.asset  HDRPUserSettings.asset  Search.settings
blueprints/: warbler-project-20250910-114244.json  warbler-project-20250910-143641.json  warbler-project-20250910-160106.json  warbler-project-20250910-160116.json  warbler-project-20250910-160622.json  warbler-project-20250910-160759.json  warbler-project-20250910-160917.json  warbler-project-20250910-161109.json  warbler-project-20250910-210419.json  warbler-project-20251020-064345.json
capsules/: README.md
checklists/: alchemist_promotion_checklist.md
configs/: overlord-sentinel.yml
data/: conservator_manifest.json  generated_wisdom_cache.json  idea_catalog.json  intervention_metrics.json  melt_budget_state.json  selfcare_config.json  tlda_fragments.json
docs/: ARCHITECTURE.md  Claims-Classification-Framework.md  Copilot-Setup.md  DOCUMENTATION_CLEANUP_PLAN.md  DTT-Vault-Documentation.md  GETTING_STARTED.md  INDEX.md  LOAD_TEST_VALIDATION.md  MCP-Security-Audit-Report.md  MERGE_PREPARATION_GUIDE.md  MMO_GAME_REGISTRATION.md  MMO_SYSTEM_STATUS.md  ORGANIZATION_SUMMARY.md  PHASE6B_REST_API_DELIVERY.md  README.md  README_LOAD_TEST_BADGE.md  SPONSOR_BADGE_GUIDE.md  STEAMWORKS_SETUP_GUIDE.md  SUMMARY.md  School-Experiment-Stage2-Manifests.md  School-Experiment-Stage4-Validation.md  School-Experiment-Workflow.md  TLDL-2025-08-21-OracleVisionDowntimeProtocolImplementation.md  TLDL-2025-08-21-UnityPluginRestructure.md  TLDL_GUIDE.md  UI_CHANGES_SUMMARY.md  VALIDATION_SYSTEM_SUMMARY.md  WARBLER_AI_INTEGRATION.md  Warbler-Core-Awakening-Chronicle.md  (+17 more)
(+1917 files in other folders)
